test: ignore HTML whitespace in tests by minifying

--- a/tests/image_attached.html
+++ b/tests/image_attached.html
@@ -1,1 +1,5 @@
-<p><ac:image><ri:attachment ri:filename="atlassian_logo.gif"/></ac:image></p>
+<p>
+  <ac:image>
+    <ri:attachment ri:filename="atlassian_logo.gif" />
+  </ac:image>
+</p>
