--- a/tests/code_block.html
+++ b/tests/code_block.html
@@ -1,2 +1,7 @@
-<ac:structured-macro ac:name="code" ac:schema-version="1"><ac:parameter ac:name="language">bash</ac:parameter><ac:plain-text-body><![CDATA[chmod 755 ~/.local/bin/pandoc
-chmod 755 ~/.local/bin/hlint]]</ac:plain-text-body></ac:structured-macro>
+<ac:structured-macro ac:name="code" ac:schema-version="1">
+  <ac:parameter ac:name="language">bash</ac:parameter>
+  <ac:plain-text-body>
+    <![CDATA[chmod 755 ~/.local/bin/pandoc
+chmod 755 ~/.local/bin/hlint]]>
+  </ac:plain-text-body>
+</ac:structured-macro>
