--- a/tests/image_external.html
+++ b/tests/image_external.html
@@ -1,1 +1,5 @@
-<p><ac:image><ri:url ri:value="http://confluence.atlassian.com/images/logo/confluence_48_trans.png"/></ac:image></p>
+<p>
+  <ac:image>
+    <ri:url ri:value="http://confluence.atlassian.com/images/logo/confluence_48_trans.png" />
+  </ac:image>
+</p>
